Fixed body overflow, textarea, missing stylesheet.

--- a/src/base/_document.scss
+++ b/src/base/_document.scss
@@ -5,6 +5,7 @@
  *    navigating between pages that do/do not have enough content to produce
  *    scrollbars naturally.
  * 2. Ensure the page always fills at least the entire height of the viewport.
+ * 3. Hide overflowing elements on mobile/narrow devices.
  */
 
 html {
@@ -13,5 +14,6 @@ html {
 }
 
 body {
+  overflow-x: hidden; // [3]
   background-color: $body-bg;
 }
